# c2pa-azure

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  manifest.json
.github/workflows/: build-and-publish.yml  dependabot-version-sync.yml  docs.yml
.zed/: debug.json  settings.json
cli/: Cargo.toml
cli/src/: main.rs
deployment/: build.sh  common.bicep  container-app.bicep  container-app.bicepparam  function.bicep
examples/: Dockerfile
examples/azure_function/: Cargo.toml  api.http  host.json
examples/azure_function/src/: main.rs
examples/cli/: Cargo.toml
examples/cli/src/: main.rs
examples/deployment/: common.bicepparam  container-app.bicepparam
examples/keda-blob-storage/: Cargo.toml
examples/keda-blob-storage/src/: main.rs
function/: Cargo.toml
function/src/: main.rs
keda-blob-storage/: Cargo.toml
keda-blob-storage/src/: main.rs  managed_identity_credential.rs
lib/: Cargo.toml
lib/src/: acs.rs  auth.rs  lib.rs  p7b.rs  sign.rs  store.cfg  trust_anchors.pem
test_data/: .gitattributes  manifest.json  settings.toml
