[workspace]
resolver = "2"

members = [
    "lib",
    "examples/cli",
    "examples/azure_function",
    "examples/keda-blob-storage",
]

[workspace.package]
version = "0.78.3"

[workspace.dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
azure_core = "0.33.0"
azure_identity = "0.33.0"
env_logger = "0.11.9"
log = "0.4.29"
tokio = { version = "1.50.0", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "macros",
    "io-util",
] }
c2pa = { version = "0.78.3", features = [
    "pdf",
    "add_thumbnails",
    "file_io",
    "fetch_remote_manifests",
    "rust_native_crypto",
], default-features = false }
