[workspace]
resolver = "2"

members = [
    "lib",
    "examples/cli",
    "examples/azure_function",
    "examples/keda-blob-storage",
]

[workspace.package]
version = "0.84.1"

[workspace.dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
async-trait = "0.1.89"
azure_core = "1.0.0"
azure_identity = "1.0.0"
env_logger = "0.11.10"
futures = "0.3.32"
log = "0.4.30"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "macros",
    "io-util",
] }
c2pa = { version = "0.84.1", features = [
    "pdf",
    "add_thumbnails",
    "file_io",
    "fetch_remote_manifests",
    "rust_native_crypto",
    "http_reqwest"
], default-features = false }
