[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
c2pa-acs = { path = "../lib" }
clap= { version = "4.5.39", features = ["derive"] }
clap_derive = "4.5.32"
azure_core = { workspace = true}
azure_identity = { workspace = true}
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }