[package]
name = "keda-blob-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.94", features = ["backtrace"] }
azure_core = { version = "0.21.0", features= ["tokio-fs"] }
azure_identity = "0.21.0"
azure_storage = "0.21.0"
azure_storage_blobs = "0.21.0"
c2pa-acs = { path = "../lib" }
env_logger = "0.11.5"
futures = "0.3.31"
log = "0.4.22"
tempfile = "3.14.0"
tokio = { version = "1.42.0", features= ["rt", "rt-multi-thread", "macros", "fs"] }
