[package]
name = "c2pa-azure"
version = "0.1.0"
edition = "2024"
description = "Rust helpers for issuing C2PA signatures via Azure Trusted Signing."
repository = "https://github.com/duggaraju/c2pa-azure"
homepage = "https://github.com/duggaraju/c2pa-azure"
documentation = "https://github.com/duggaraju/c2pa-azure#readme"
keywords = [
    "c2pa",
    "azure",
    "trusted-signing",
    "content-authenticity",
    "content-integrity",
]
license-file = "../LICENSE"
readme = "../README.md"

[dependencies]
async-trait = "0.1.89"
cms = "0.2.3"
bytes = "1.11.0"
serde_json = "1.0.145"
chksum-hash-sha2-384 = "0.0.1"
serde = { version = "1.0.228", features = ["derive"] }
envconfig = "0.11.1"
sha2 = "0.10.9"
c2pa = { version = "0.73.0", features = [
    "pdf",
    "add_thumbnails",
    "file_io",
    "fetch_remote_manifests",
    "rust_native_crypto",
    "default_http",
], default-features = false }
azure_core = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
