[package]
name = "azure-function"
version = "0.1.0"
edition = "2024"

[dependencies]
c2pa-azure = { path = "../../lib" }
async-trait = "0.1.87"
futures = "0.3.31"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls"] }
tempfile = "3.15.0"
warp = { version = "0.4.2", features = ["server"  ] }
anyhow = { workspace = true }
azure_core = { workspace = true }
azure_identity = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
c2pa = { workspace = true}