[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
c2pa-azure = { path = "../../lib" }
clap= { version = "4.6.0", features = ["derive"] }
clap_derive = "4.6.0"
azure_core = { workspace = true}
azure_identity = { workspace = true}
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
c2pa = { workspace = true}