[package]
name = "keda-blob-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
async-lock = "3.4.0"
async-trait = "0.1.85"
azure_storage_blob = { version = "0.6.0" }
c2pa-azure = { path = "../../lib" }
futures = "0.3.31"
serde = "1.0.219"
tempfile = "3.15.0"
time = "0.3.41"
anyhow = { workspace = true }
azure_core = { workspace = true}
azure_identity = { workspace = true}
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }