[package]
name = "keda-blob-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
async-lock = "3.4.2"
async-trait = { workspace = true }
azure_storage_blob = { version = "0.10.1" }
c2pa-azure = { path = "../../lib" }
futures = { workspace = true }
serde = "1.0.228"
tempfile = { workspace = true }
anyhow = { workspace = true }
azure_core = { workspace = true}
azure_identity = { workspace = true}
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
c2pa = { workspace = true}